--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: ruby
-cache:
-- bundler
-before_script:
-- bundle exec rake db:create
-- bundle exec rake db:migrate
-- bundle exec rake assets:precompile
+rvm:
+- 2.5.1
+script:
+  - bundle exec rake db:create db:migrate
 deploy:
   provider: heroku
   api_key:
