--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
-script:
-  - bin/rails db:create db:migrate db:seed
+before_script:
+  - bin/rails db:create db:migrate RAILS_ENV=test
+script: bundle exec rspec
 deploy:
   provider: heroku
   api_key:
